add details section to escort page

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,4 +1,7 @@
 {
+  "seo": {
+    "name": " 🫦 Paraguay XP"
+  },
   "navbar": {
     "publish": "Publish",
     "logout": "Logout"
@@ -65,6 +68,23 @@
       "title": "About me",
       "showOriginal": "Show original text",
       "showTransaltion": "Show translated text"
+    },
+    "details": {
+      "title": "Details",
+      "english": "English",
+      "spanish": "Spanish",
+      "portuguese": "Brazilian",
+      "basic": "Basic",
+      "intermediate": "Intermediate",
+      "advanced": "Advanced",
+      "native": "Native",
+      "nationality": "Country of origin",
+      "age": "Age",
+      "years": "years",
+      "height": "Height",
+      "breast": "Breast",
+      "waist": "Waist",
+      "hips": "Hips"
     }
   },
   "blog": {
@@ -109,20 +129,6 @@
   "idFrontInput": "ID front",
   "idBackInput": "ID back",
   "selfieInput": "Selfie",
-  "birthDate1": "Date of birth first girl",
-  "uploadFrontId1": "Upload ID front first girl",
-  "uploadBackId1": "Upload ID back first girl",
-  "uploadSelfie1": "Upload selfie first girl",
-  "idFrontInput1": "ID front first girl",
-  "idBackInput1": "ID back first girl",
-  "selfieInput1": "Selfie first girl",
-  "birthDate2": "Date of birth second girl",
-  "uploadFrontId2": "Upload ID front second girl",
-  "uploadBackId2": "Upload ID back second girl",
-  "uploadSelfie2": "Upload selfie second girl",
-  "idFrontInput2": "ID front second girl",
-  "idBackInput2": "ID back second girl",
-  "selfieInput2": "Selfie second girl",
   "head": "Title",
   "headPlaceholder": "Write your title here",
   "description": "Description",
@@ -151,42 +157,14 @@
   "confirm": "Confirm",
   "registry": "Registration",
   "name": "Name",
-  "name1": "Name first girl",
-  "name2": "Name second girl",
   "indipendentOrAgency": "Indipendent or Agency",
-  "nationality": "Country of origin",
-  "nationality1": "Country of origin first girl",
-  "nationality2": "Country of origin second girl",
   "selectArea": "Select your area",
   "rate": "Hourly rate",
   "services": "Services",
   "selectServices": "Select offered services",
   "body": "Figure",
-  "body1": "Figure first girl",
-  "body2": "Figure second girl",
-  "age": "Age",
-  "years": "years",
-  "height": "Height",
-  "breast": "Breast",
-  "waist": "Waist",
-  "hips": "Hips",
-  "height1": "Height first girl",
-  "breast1": "Breast first girl",
-  "waist1": "Waist first girl",
-  "hips1": "Hips first girl",
-  "height2": "Height second girl",
-  "breast2": "Breast second girl",
-  "waist2": "Waist second girl",
-  "hips2": "Hips second girl",
   "extraFreeWorning": "To get a free lifetime advertisement you still have to select {missingExtra} special services.",
   "languages": "Languages",
-  "english": "English",
-  "spanish": "Spanish",
-  "portuguese": "Brazilian",
-  "basic": "Basic",
-  "intermediate": "Intermediate",
-  "advanced": "Advanced",
-  "native": "Native",
   "selectLevel": "Select your level",
   "availability": "Availability",
   "fromDay": "From day",
@@ -244,7 +222,6 @@
   "invalidWhatsappCode": "Invalid Whatsapp code",
   "commentPublished": "Comment saved. It now needs admin approval.",
   "call": "Call",
-  "details": "Details",
   "sendWhatsapp": "Send Whatsapp",
   "pageNotFound": "This page could not be found",
   "unauthorized": "Unauthorized",
@@ -304,10 +281,6 @@
   "loginDisabled": "Login temporarily disabled",
   "scrollToTop": "Scroll to the top",
   "contactUs": "Contact us",
-  "seo": {
-    "name": "🫦\uFE0F | Paraguay XP",
-    "blogDescription": "The blog of the Paraguay escorts"
-  },
   "jsonld": {
     "indexKeywords": "escort paraguay, escort py, escort asunción, vip escort paraguay, companions paraguay, whores paraguay",
     "headlineIndexClients": "What to expect from an escort in Paraguay and how to behave with her",  
