--- a/lang/es.json
+++ b/lang/es.json
@@ -1,4 +1,7 @@
 {
+  "seo": {
+    "name": " 🫦 Paraguay XP"
+  },
   "navbar": {
     "publish": "Publica",
     "logout": "Cerrar sesión"
@@ -65,6 +68,23 @@
       "title": "Sobre mi",
       "showOriginal": "Mostrar texto original",
       "showTransaltion": "Mostrar texto traduzido"
+    },
+    "details": {
+      "title": "Detalles",
+      "english": "Inglés",
+      "spanish": "Español",
+      "portuguese": "Brasileño",
+      "basic": "Básico",
+      "intermediate": "Intermedio",
+      "advanced": "Avanzado",
+      "native": "Nativo",
+      "nationality": "País de origen",
+      "age": "Edad",
+      "years": "años",
+      "height": "Estatura",
+      "breast": "Busto",
+      "waist": "Cintura",
+      "hips": "Caderas"
     }
   },
   "blog": {
@@ -108,21 +128,7 @@
   "uploadSelfie": "Subir selfie",
   "idFrontInput": "Cédula frontal",
   "idBackInput": "Cédula posterior",
-  "selfieInput": "Selfie",
-  "birthDate1": "Fecha de nacimiento primera chica",
-  "uploadFrontId1": "Subir cédula frontal primera chica",
-  "uploadBackId1": "Subir cédula posterior primera chica",
-  "uploadSelfie1": "Subir selfie primera chica",
-  "idFrontInput1": "Cédula frontal primera chica",
-  "idBackInput1": "Cédula posterior primera chica",
-  "selfieInput1": "Selfie primera chica",
-  "birthDate2": "Fecha de nacimiento segunda chica",
-  "uploadFrontId2": "Subir cédula frontal segunda chica",
-  "uploadBackId2": "Subir cédula posterior segunda chica",
-  "uploadSelfie2": "Subir selfie segunda chica",
-  "idFrontInput2": "Cédula frontal segunda chica",
-  "idBackInput2": "Cédula posterior segunda chica",
-  "selfieInput2": "Seflie segunda chica",
+  "selfieInput": "Selfie",  
   "head": "Título",
   "headPlaceholder": "Escribe tu título aquí",
   "description": "Descripción",
@@ -151,41 +157,14 @@
   "confirm": "Confirmar", 
   "registry": "Registro",
   "name": "Nombre",
-  "name1": "Nombre Primera Chica",
-  "name2": "Nombre Segunda Chica",
   "indipendentOrAgency": "Independiente o Agencia",
-  "nationality": "País de origen",
-  "nationality2": "País de origen segunda chica",
   "selectArea": "Selecciona tu barrio",
   "rate": "Tarifa oraria",
   "services": "Servicios",
   "selectServices": "Seleccione los servicios ofrecidos",
   "body": "Figura",
-  "body1": "Figura primera chica",
-  "body2": "Figura segunda chica",
-  "age": "Edad",
-  "years": "años",
-  "height": "Estatura",
-  "breast": "Busto",
-  "waist": "Cintura",
-  "hips": "Caderas",
-  "height1": "Estatura primera chica",
-  "breast1": "Busto primera chica",
-  "waist1": "Cintura primera chica",
-  "hips1": "Caderas primera chica",  
-  "height2": "Estatura segunda chica",
-  "breast2": "Busto segunda chica",
-  "waist2": "Cintura segunda chica",
-  "hips2": "Caderas segunda chica", 
   "extraFreeWorning": "Para aprovechar de una publicación gratis de por vida, aún te falta seleccionar {missingExtra} servicios especiales.",
   "languages": "Idiomas",
-  "english": "Inglés",
-  "spanish": "Español",
-  "portuguese": "Brasileño",
-  "basic": "Básico",
-  "intermediate": "Intermedio",
-  "advanced": "Avanzado",
-  "native": "Nativo",
   "selectLevel": "Selecciona tu nivel",
   "availability": "Disponibilidad",
   "fromDay": "Desde el dia",
@@ -243,7 +222,6 @@
   "invalidWhatsappCode": "Código de Whatsapp no ​​válido",
   "commentPublished": "Comentario guardado. Ahora necesita la aprobación del administrador.",
   "call": "Llamar",
-  "details": "Detalles",
   "sendWhatsapp": "Enviar Whatsapp",
   "pageNotFound": "Esta página no se pudo encontrar",
   "unauthorized": "No autorizado",
@@ -303,10 +281,6 @@
   "loginDisabled": "Inicio de sesión temporalmente deshabilitado",
   "scrollToTop": "Desplácese hasta la parte superior",
   "contactUs": "Contacta con nosotros",
-  "seo": {
-    "name": "🫦\uFE0F | Paraguay XP",
-    "blogDescription": "El blog de la escort y acompañantes en Paraguay"
-  },
   "jsonld": {
     "indexKeywords": "escort paraguay, escort py, scort paraguay, scort py, escort asunción, acompañantes en paraguay, scort en paraguay, zona roja, zona roja py, foro hot, zona roja.com.py, hot py, hot com py, skokka paraguay, putas paraguay, putas py, puta asuncion, pornos paraguaya",
     "headlineIndexClients": "Qué esperar de una escort en Paraguay y cómo comportarse con ella",  
