--- a/lang/pt.json
+++ b/lang/pt.json
@@ -1,4 +1,7 @@
 {
+  "seo": {
+    "name": " 🫦 Paraguay XP"
+  },
   "navbar": {
     "publish": "Publique",
     "logout": "Sair"
@@ -65,6 +68,23 @@
       "title": "Sobre mim",
       "showOriginal": "Mostrar original",
       "showTransaltion": "Mostrar tradução"
+    },
+    "details": {
+      "title": "Detalhes",
+      "english": "Inglês",
+      "spanish": "Espanhol",
+      "portuguese": "Brasileiro",
+      "basic": "Basico",
+      "intermediate": "Intermediário",
+      "advanced": "Avançado",
+      "native": "Língua materna",
+      "nationality": "País de origem",
+      "age": "Era",
+      "years": "anos",
+      "height": "Altura",
+      "breast": "Peito",
+      "waist": "Cintura",
+      "hips": "Quadril"
     }
   },
   "blog": {
@@ -110,20 +130,6 @@
   "idFrontInput": "Frente de ID",
   "idBackInput": "ID de volta",
   "selfieInput": "Selfie",
-  "birthDate1": "Data de nascimento primeira menina",
-  "uploadFrontId1": "Carregar frente de ID primeira menina",
-  "uploadBackId1": "Carregar ID de volta primeira menina",
-  "uploadSelfie1": "Carregar selfie primeira menina",
-  "idFrontInput1": "Frente de ID primeira menina",
-  "idBackInput1": "ID de volta primeira menina",
-  "selfieInput1": "Selfie primeira menina",
-  "birthDate2": "Data de nascimento segunda menina",
-  "uploadFrontId2": "Carregar frente de ID segunda menina",
-  "uploadBackId2": "Carregar ID de volta segunda menina",
-  "uploadSelfie2": "Carregar selfie segunda menina",
-  "idFrontInput2": "Frente de ID segunda menina",
-  "idBackInput2": "ID de volta segunda menina",
-  "selfieInput2": "Selfie segunda menina",
   "head": "Título",
   "headPlaceholder": "Escreva sua título aqui.",
   "description": "Descrição",
@@ -152,42 +158,14 @@
   "confirm": "Confirme",  
   "registry": "Cadastro",
   "name": "Nome",
-  "name1": "Nome Primeira Menina",
-  "name2": "Nome Segunda Menina",
   "indipendentOrAgency": "Independente ou Agência",
-  "nationality": "País de origem",
-  "nationality1": "País de origem primeira menina",
-  "nationality2": "País de origem segunda menina",
   "selectArea": "Selecione seu bairro",
   "rate": "Taxa horária",
   "services": "Serviços",
   "selectServices": "Selecione os serviços oferecidos",
   "body": "Corpo",
-  "body1": "Corpo primeira menina",
-  "body2": "Corpo segunda menina",
-  "age": "Era",
-  "years": "anos",
-  "height": "Altura",
-  "breast": "Peito",
-  "waist": "Cintura",
-  "hips": "Quadril",    
-  "height1": "Altura primeira menina",
-  "breast1": "Peito primeira menina",
-  "waist1": "Cintura primeira menina",
-  "hips1": "Quadril primeira menina", 
-  "height2": "Altura segunda menina",
-  "breast2": "Peito segunda menina",
-  "waist2": "Cintura segunda menina",
-  "hips2": "Quadril segunda menina",
   "extraFreeWorning": "Para aproveitar uma publicação gratuita vitalícia, você ainda precisa selecionar {missingExtra} serviços especiais.",
   "languages": "Línguas",
-  "english": "Inglês",
-  "spanish": "Espanhol",
-  "portuguese": "Brasileiro",
-  "basic": "Basico",
-  "intermediate": "Intermediário",
-  "advanced": "Avançado",
-  "native": "Língua materna",
   "selectLevel": "Selecione seu nível",
   "availability": "Disponibilidade",
   "fromDay": "De dia",
@@ -245,7 +223,6 @@
   "invalidWhatsappCode": "Código Whatsapp inválido",
   "commentPublished": "Comentário salvo. Agora precisa de aprovação do administrador.",
   "call": "Ligar",
-  "details": "Detalhes",
   "sendWhatsapp": "Enviar Whatsapp",
   "pageNotFound": "Esta página não foi encontrada",
   "unauthorized": "Não autorizado",
@@ -305,10 +282,6 @@
   "loginDisabled": "Login temporariamente desativado",
   "scrollToTop": "Role para o topo",
   "contactUs": "Contate-Nos",
-  "seo": {
-    "name": "🫦\uFE0F | Paraguay XP",
-    "blogDescription": "O blog das acompanhantes do Paraguai"
-  },
   "jsonld": {
     "indexKeywords": "escort paraguai, escort assunção, acompanhantes paraguai, acompanhantes assunção",
     "headlineIndexClients": "O que esperar de uma acompanhante no Paraguai e como se comportar com ela",  
