add availability section to escort page

--- a/lang/es.json
+++ b/lang/es.json
@@ -90,6 +90,15 @@
       "hotel": "Hotel, Motel y Domicilio",
       "dinner": "Cenas",
       "travel": "Viajes"
+    },
+    "availability": {
+      "monday": "Lunes",
+      "tuesday": "Martes",
+      "wednesday": "Miércoles",
+      "thursday": "Jueves",
+      "friday": "Viernes",
+      "saturday": "Sábado",
+      "sunday": "Domingo"
     }
   },
   "blog": {
