--- a/lang/en.json
+++ b/lang/en.json
@@ -90,6 +90,15 @@
       "hotel": "Outcall",
       "dinner": "Dinners",
       "travel": "Travels"
+    },
+    "availability": {
+      "monday": "Monday",
+      "tuesday": "Tuesday",
+      "wednesday": "Wednesday",
+      "thursday": "Thursday",
+      "friday": "Friday",
+      "saturday": "Saturday",
+      "sunday": "Sunday"
     }
   },
   "blog": {
