--- a/lang/en.json
+++ b/lang/en.json
@@ -56,6 +56,7 @@
     "descriptionCity": "Escorts for incall in the {area} city of Paraguay"
   },
   "escort": {
+    "title": "{escort} escort",
     "gallery": {
       "title": "Photos & videos",
       "tapToEnlarge": "Tap to enlarge",
