--- a/lang/es.json
+++ b/lang/es.json
@@ -113,6 +113,9 @@
     },
     "rate": {
       "title": "Tarifa oraria"
+    },
+    "navigator": {
+      "title": "Explorar escorts {levelName}"
     }
   },
   "blog": {
