fix navigator title

--- a/lang/en.json
+++ b/lang/en.json
@@ -115,7 +115,7 @@
       "title": "Hourly rate"
     },
     "navigator": {
-      "title": "Browse escort {levelName}"
+      "title": "Browse other escorts {levelName} level"
     }
   },
   "blog": {
