--- a/lang/es.json
+++ b/lang/es.json
@@ -115,7 +115,7 @@
       "title": "Tarifa oraria"
     },
     "navigator": {
-      "title": "Explorar escorts {levelName}"
+      "title": "Explorar otras escorts nivel {levelName}"
     }
   },
   "blog": {
