--- a/lang/pt.json
+++ b/lang/pt.json
@@ -115,7 +115,7 @@
       "title": "Taxa horária"
     },
     "navigator": {
-      "title": "Procurar Escorts {levelName}"
+      "title": "Explore outros acompanhantes de nível {levelName}"
     }
   },
   "blog": {
